# simple-bazel-install

./: BUILD  README.md  WORKSPACE  package.xml  simplebazel.repos
simplebazel/: BUILD  hello-lib.cc  hello-lib.hh  hello-test.cc  hello-world.cc
tools/: BUILD  install.bzl
